--- a/Nico.html
+++ b/Nico.html
@@ -13,21 +13,22 @@
     <div class="container">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li><a href="enrollment.html">Enroll Student</a></li>
                 <li><a href="instructor.html">Add Instructor</a></li>
                 <li><a href="add_course.html">Add Course</a></li>
                 <li><a href="register_course.html">Register Course</a></li>
                 <li><a href="drop_course.html">Drop Course</a></li>
+                <li><a href="Manual.html">Manual</a></li>
             </ul>
         </nav>
         <main>
             <h2>Welcome to the Course Registration System</h2>
             <p>Manage students, instructors, and courses with ease.</p>
-            <button onclick="location.href='enroll_student.html'">Get Started</button>
+            <a href="enrollment.html">
+                <button>Get Started</button>
+            </a>
         </main>
     </div>
-
 
     <footer>
         <p>Project by: Nicolas, Christian, Serj, Tyler</p>
