--- a/enrollment.html
+++ b/enrollment.html
@@ -10,9 +10,12 @@
     <header>
         <h1>Student Enrollment</h1>
     </header>
+    <nav>
+        <ul>
+            <li><a href="Nico.html">Home Page</a></li>
+        </ul>
+    </nav>
     <title>Student Enrollment</title>
-    <a href="Nico.html">Back to Home Page</a>
-
 
     <form class="enrollstud">
         <label for="first-student">Student First Name</label>
