--- a/instructor.html
+++ b/instructor.html
@@ -10,9 +10,12 @@
     <header>
         <h1>Instructor Selection</h1>
     </header>
-    <title>Add Instrucltor</title>
-    <a href="Nico.html">Back to Home Page</a>
-
+    <nav>
+        <ul>
+            <li><a href="Nico.html">Home Page</a></li>
+        </ul>
+    </nav>
+    <title>Add Instructor</title>
 
     <form class="enrollstud">
         <label for="first-prof">Instructor First Name</label>
